--- a/src/ProgramBlockEditor.scss
+++ b/src/ProgramBlockEditor.scss
@@ -1,19 +1,11 @@
 @import 'variables';
 
 .ProgramBlockEditor__container {
-    @include getContainerThemeColor(default);
+    background-color: #F1F1F1;
     display: grid;
     height: 100%;
     grid-template-columns: 6rem auto;
     grid-template-rows: 4rem auto;
-}
-
-.ProgramBlockEditor__container.forest {
-    @include getContainerThemeColor(forestTheme);
-}
-
-.ProgramBlockEditor__container.space {
-    @include getContainerThemeColor(spaceTheme);
 }
 
 .ProgramBlockEditor__header {
