--- a/src/index.scss
+++ b/src/index.scss
@@ -31,13 +31,13 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
-body.forest {
+body.forest-theme {
     background-color: #49827A;
     background-image: url('./svg/ForestBackground.svg');
     background-size: 13%;
 }
 
-body.space {
+body.space-theme {
     background-color: #171C1C;
     background-image: url('./svg/SpaceBackground.svg');
 }
