--- a/src/ProgramBlockEditor.scss
+++ b/src/ProgramBlockEditor.scss
@@ -196,5 +196,5 @@ button.ProgramBlockEditor__program-block--active {
 }
 
 .ProgramBlockEditor__program-sequence-scroll-container.isDragging {
-    background-color: #33333325;
+    box-shadow: 0 0 0 0.4rem #79F1CD;
 }
