C2LC-274: Changed highlight colour of drag targets.

--- a/src/AddNode.scss
+++ b/src/AddNode.scss
@@ -77,5 +77,5 @@ button.btn.AddNode__expanded-button svg {
 }
 
 .AddNode__expanded-button.isDragTarget {
-    box-shadow: 0 0 0 0.4rem #79F1CD;
+    box-shadow: 0 0 0 0.4rem #53A28C;
 }
