C2LC-272: Update PenDownToggleSwitch's focus style to match Refresh button

--- a/src/PenDownToggleSwitch.scss
+++ b/src/PenDownToggleSwitch.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 
 .PenDownToggleSwitch:focus {
-    box-shadow: 0 0 0 $c2lc-focus-indicator-width #299DCE;
+    box-shadow: 0 0 0 $c2lc-focus-indicator-width $c2lc-focus-indicator-color;
 }
 
 .PenDownToggleSwitch.ToggleSwitch--checked {
