--- a/src/ThemeSelector.scss
+++ b/src/ThemeSelector.scss
@@ -3,3 +3,7 @@
 .ThemeSelector {
     margin-left: 2rem;
 }
+
+.ThemeSelector button:focus {
+    box-shadow: 0 0 0 $c2lc-focus-indicator-width #299DCE;
+}
