C2LC-201: Update ProgramBlockEditor with new pausing behaviour

--- a/src/ProgramBlockEditor.scss
+++ b/src/ProgramBlockEditor.scss
@@ -1,5 +1,9 @@
 @import 'variables';
 
+@keyframes pausedAnimation {
+    50% {box-shadow: 0 0 0 0.4rem #79F1CD;}
+}
+
 .ProgramBlockEditor__container {
     background-color: #F1F1F1;
     display: grid;
@@ -166,6 +170,10 @@ button.btn.ProgramBlockEditor__program-deleteAll-button--pressed.ProgramBlockEdi
 
 button.ProgramBlockEditor__program-block--active {
     box-shadow: 0 0 0 0.2rem #79F1CD;
+}
+
+button.ProgramBlockEditor__program-block--paused {
+    animation: pausedAnimation 2s infinite;
 }
 
 .ProgramBlockEditor__action-panel-container-outer {
