C2LC-280: Update focus style of the add node toggle switch

--- a/src/ProgramBlockEditor.scss
+++ b/src/ProgramBlockEditor.scss
@@ -39,6 +39,10 @@
     float: left;
 }
 
+.ProgramBlockEditor__add-node-toggle-switch:focus {
+    box-shadow: 0 0 0 $c2lc-focus-indicator-width #299DCE;
+}
+
 .ProgramBlockEditor__add-node-toggle-switch.ToggleSwitch--checked {
     background: #000;
 }
