--- a/src/ProgramBlockEditor.scss
+++ b/src/ProgramBlockEditor.scss
@@ -56,16 +56,11 @@ button.btn.ProgramBlockEditor__program-deleteAll-button:not(:focus) {
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
 }
 
-button.btn.ProgramBlockEditor__program-deleteAll-button:hover {
-    box-shadow: 0 0 0 $c2lc-hover-indicator-width $c2lc-focus-indicator-color;
-    background-color: #e5e5e5;
-}
-
 button.btn.ProgramBlockEditor__program-deleteAll-button--pressed {
     background-color: #000;
 }
 
-button.btn.ProgramBlockEditor__program-deleteAll-button--disabled {
+button.btn.ProgramBlockEditor__program-deleteAll-button.ProgramBlockEditor__program-deleteAll-button--disabled {
     background-color: $c2lc-primary-button-color;
     cursor: default;
 }
@@ -86,6 +81,11 @@ button.btn.ProgramBlockEditor__program-deleteAll-button--pressed.ProgramBlockEdi
 
 button.btn.ProgramBlockEditor__program-deleteAll-button--disabled svg {
     stroke: $c2lc-disabled-color;
+}
+
+button.btn.ProgramBlockEditor__program-deleteAll-button:hover {
+    box-shadow: 0 0 0 $c2lc-hover-indicator-width $c2lc-focus-indicator-color;
+    background-color: #e5e5e5;
 }
 
 button.btn.ProgramBlockEditor__program-deleteAll-button--pressed svg,
