--- a/src/ProgramSpeedController.scss
+++ b/src/ProgramSpeedController.scss
@@ -14,6 +14,5 @@
 
 .form-control-range:focus,
 .form-control-range:focus::-webkit-slider-runnable-track{
-    outline: none;
-    box-shadow: 0 0 0.3rem $c2lc-focus-indicator-width #007bff;
+    outline: #007bff auto;
 }
