C2LC-272: Add relative position property to command blocks

--- a/src/index.scss
+++ b/src/index.scss
@@ -65,6 +65,7 @@ button.btn-command-block--none {
 button.command-block {
     width: 4rem;
     height: 4rem;
+    position: relative;
     padding: 0;
 }
 
