--- a/src/ProgramBlockEditor.scss
+++ b/src/ProgramBlockEditor.scss
@@ -159,16 +159,24 @@ button.btn.ProgramBlockEditor__program-deleteAll-button--pressed.ProgramBlockEdi
 }
 
 .ProgramBlockEditor__program-block-connector {
-    z-index: 1;
     background-color: #939595;
-    min-width: 0.6rem;
+    min-width: 0.8rem;
     height: 0.1rem;
 }
 
 button.ProgramBlockEditor__program-block--active {
-    box-shadow:
-        0 0 0 0.2rem #FFF,
-        0 0 0 0.5rem #53A28C;
+    z-index: 1;
+    &::after {
+        content: "";
+        border-radius: 15px;
+        display: block;
+        width: 5.4rem;
+        height: 5.4rem;
+        border: solid 0.5rem #53A28C;
+        position: absolute;
+        top: -0.7rem;
+        left: -0.75rem;
+    }
 }
 
 .ProgramBlockEditor__action-panel-container-outer {
