--- a/src/PlayButton.scss
+++ b/src/PlayButton.scss
@@ -11,6 +11,7 @@ button.btn.PlayButton--play {
 
 button.btn.PlayButton--pause {
     margin-top: 0.5rem;
+    margin-right: 1.5rem;
     padding: 0.6rem 0.6rem 0.6rem 0.6rem;
     border: 1px solid #FFF;
     border-radius: 50%;
