C2LC-203: Apply margin between the play button and the stop button in App

--- a/src/App.scss
+++ b/src/App.scss
@@ -122,6 +122,10 @@ body {
     margin-bottom: 1rem;
 }
 
+.App__playButton {
+    margin-right: 1.5rem;
+}
+
 .App__shareButton-container {
     align-items: flex-end;
     display: flex;
