C2LC-266: Update ProgramSpeedController's focus style to match other components

--- a/src/ProgramSpeedController.scss
+++ b/src/ProgramSpeedController.scss
@@ -14,5 +14,5 @@
 
 .form-control-range:focus,
 .form-control-range:focus::-webkit-slider-runnable-track{
-    outline: #007bff auto;
+    outline: $c2lc-focus-indicator-color auto;
 }
