--- a/src/ProgramBlockEditor.scss
+++ b/src/ProgramBlockEditor.scss
@@ -1,7 +1,9 @@
 @import 'variables';
 
 @keyframes pausedAnimation {
-    50% {box-shadow: 0 0 0 0.4rem #79F1CD;}
+    0% {box-shadow: 0 0 0 0.7rem #53A28C;}
+    50% {box-shadow: 0 0 0 0.4rem #53A28C;}
+    100% {box-shadow: 0 0 0 0.7rem #53A28C;}
 }
 
 .ProgramBlockEditor__container {
@@ -172,21 +174,11 @@ button.btn.ProgramBlockEditor__program-deleteAll-button--pressed.ProgramBlockEdi
 }
 
 button.ProgramBlockEditor__program-block--active {
-    z-index: 1;
-    &::after {
-        content: "";
-        border-radius: 15px;
-        display: block;
-        width: 5.4rem;
-        height: 5.4rem;
-        border: solid 0.5rem #53A28C;
-        position: absolute;
-        top: -0.7rem;
-        left: -0.75rem;
-    }
+    box-shadow: 0 0 0 0.7rem #53A28C;
 }
 
 button.ProgramBlockEditor__program-block--paused {
+    animation-timing-function: ease;
     animation: pausedAnimation 2s infinite;
 }
 
