C2LC-230: Update focus/hover styles of ShareButton

--- a/src/ShareButton.css
+++ b/src/ShareButton.css
@@ -1,3 +1,8 @@
 .ShareButton {
     width: 10rem;
 }
+
+button.btn.ShareButton:focus,
+button.btn.ShareButton:hover{
+    box-shadow: 0 0 0 0.2rem #299DCE;
+}
