--- a/src/AddNode.scss
+++ b/src/AddNode.scss
@@ -47,6 +47,6 @@ button.btn.AddNode__expanded-button svg {
     stroke: #FFF;
 }
 
-.AddNode__expanded-button.isDragTarget {
-    box-shadow: 0 0 0 0.4rem #53A28C;
+.AddNode__expanded-button--isDragTarget {
+    box-shadow: 0 0 0 0.4rem #53A28C !important;
 }
