C2LC-274: Refined event.relatedTarget approach.

--- a/src/ProgramBlockEditor.scss
+++ b/src/ProgramBlockEditor.scss
@@ -118,6 +118,7 @@ button.btn.ProgramBlockEditor__program-deleteAll-button--pressed.ProgramBlockEdi
     border-width: 0.1rem 0 0.1rem 0.1rem;
     border-color: #8F8F8F;
     border-style: solid;
+    pointer-events: none;
 }
 
 .ProgramBlockEditor__character-column-character-container {
