C2LC-274: Make isDragTarget selector more specific
Without this change, the rule for 'button.btn:focus' was taking
precedence in some cases as that selector is more specific, causing
the drag target styling not to be visible. We observed this behaviour
on iPad Safari when the add-node had focus before a drag was started.

--- a/src/AddNode.scss
+++ b/src/AddNode.scss
@@ -23,6 +23,10 @@ button.btn.AddNode__expanded-button:hover {
     background-color: #e5e5e5;
 }
 
+button.btn.AddNode__expanded-button.AddNode__expanded-button--isDragTarget {
+    box-shadow: 0 0 0 0.4rem #53A28C;
+}
+
 .AddNode--is-dragging-command .AddNode__expanded-button {
     pointer-events: none;
 }
@@ -45,8 +49,4 @@ button.btn.AddNode__expanded-button svg {
 .AddNode__collapsed-icon svg {
     display: block;
     stroke: #FFF;
-}
-
-.AddNode__expanded-button.AddNode__expanded-button--isDragTarget {
-    box-shadow: 0 0 0 0.4rem #53A28C;
 }
