--- a/src/App.scss
+++ b/src/App.scss
@@ -1,24 +1,32 @@
 @import 'variables';
 
 body {
-    overflow-y: scroll;
+    overflow-y: hidden;
     overflow-x: hidden;
 }
 
 .App__container {
     background-color: #FFF;
-    width: 80%;
-    padding: 1rem 2rem 3rem 3rem;
-    margin: auto;
+    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: 1fr min-content minmax(auto, 78rem) 1fr;
+    grid-template-rows: min-content auto 1fr min-content;
+    row-gap: 1rem;
+    height: 100vh;
 }
 
 .App__header {
-    display: flex;
     color: #FFF;
+    display: flex;
+    box-sizing: border-box;
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 2;
 }
 
 .App__title {
-    width: 80%;
+    width: 100%;
     background-color: #000;
     padding: 0.5rem 2rem 0.5rem 3rem;
 }
@@ -49,13 +57,26 @@ body {
 }
 
 .App__scene-container {
-    margin-top: 2rem;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    min-height: 12rem;
+    min-width: 19.5rem;
+    max-width: 78rem;
+    display: grid;
+    grid-template-rows: auto min-content;
+    border-width: $c2lc-scene-border-width $c2lc-scene-border-width 0 $c2lc-scene-border-width;
+    border-color: $c2lc-scene-border-color;
+    border-style: $c2lc-scene-border-style;
 }
 
 .App__scene-controls {
+    grid-row-start: 2;
+    grid-row-end: 3;
     background-color: #F1F1F1;
     height: 4rem;
-    border-width: 0 $c2lc-scene-border-width $c2lc-scene-border-width $c2lc-scene-border-width;
+    border-width: 0 0 $c2lc-scene-border-width 0;
     border-color: $c2lc-scene-border-color;
     border-style: $c2lc-scene-border-style;
     display: grid;
@@ -73,36 +94,52 @@ body {
     margin-left: 50px;
 }
 
-.App__program-section {
-    margin-top: 1.5rem;
-}
-
 .App__command-palette {
     background-color: #F1F1F1;
-    height: 100%;
-    padding-top: 2rem;
     text-align: center;
+    margin-right: 1rem;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 4;
+    overflow: hidden;
 }
 
 .App__command-palette-heading {
     font-weight: bold;
     font-size: inherit;
-    margin: 0 0 2rem 0;
+    margin: 2rem 0;
+}
+
+.App__command-palette-command-container {
+    width: 100%;
+    height: 100%;
+    padding: 1rem;
+    overflow-y: scroll;
 }
 
 .App__command-palette-commands {
-    // width = #items * itemWidth + gapWidth * (#items - 1)
-    width: 14rem;
-    margin: 3rem auto 0 auto;
+    width: 9rem;
     display: grid;
-    grid-template-columns: repeat(3, 4rem);
+    grid-template-columns: repeat(2, 4rem);
     grid-gap: 1rem;
 }
 
+.App__program-block-editor {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 3;
+    grid-row-end: 4;
+    height: auto;
+}
+
 .App__playAndShare-container {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 4;
+    grid-row-end: 5;
     background-color: #F1F1F1;
     height: 10rem;
-    margin-top: 1rem;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
 }
@@ -137,20 +174,15 @@ body {
 }
 
 @media only screen and (max-width: 768px) {
-    .App__playAndShare-container {
-        grid-template-rows: 1fr 1fr;
+    .App__command-palette-commands {
+        width: 6rem;
+        padding-left: 1rem;
+        grid-template-columns: repeat(1, 4rem);
     }
-    .App__playControl-container {
-        grid-row-start: 1;
-        grid-row-end: 2;
-    }
-    .App__shareButton-container {
-        padding-right: 0;
-        align-items: flex-start;
-        flex-direction: row;
-        grid-column-start: 2;
-        grid-column-end: 3;
-        grid-row-start: 2;
-        grid-row-end: 3;
+}
+
+@media only screen and (max-width: 414px) {
+    body {
+        overflow: scroll;
     }
 }
