C2LC-286: Add bottom margins to the play and stop buttons

--- a/src/PlayButton.scss
+++ b/src/PlayButton.scss
@@ -2,6 +2,7 @@
 
 button.btn.PlayButton--play {
     margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
     padding: 0.6rem 0.45rem 0.6rem 0.75rem;
     border: 1px solid #FFF;
     border-radius: 50%;
@@ -10,6 +11,7 @@ button.btn.PlayButton--play {
 
 button.btn.PlayButton--pause {
     margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
     padding: 0.6rem 0.6rem 0.6rem 0.6rem;
     border: 1px solid #FFF;
     border-radius: 50%;
