--- a/src/StopButton.scss
+++ b/src/StopButton.scss
@@ -8,6 +8,7 @@
 
 button.btn.StopButton {
     margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
     padding: 0.6rem;
     border: 1px solid #FFF;
     border-radius: 50%;
