--- a/src/App.scss
+++ b/src/App.scss
@@ -15,20 +15,27 @@ body {
     height: 100vh;
 }
 
-.App__header {
-    color: #FFF;
-    display: flex;
-    box-sizing: border-box;
+.App__header-background {
+    background-color: #000;
     grid-column-start: 1;
     grid-column-end: 5;
     grid-row-start: 1;
     grid-row-end: 2;
 }
 
+.App__header {
+    color: #FFF;
+    display: flex;
+    box-sizing: border-box;
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+
 .App__title {
     width: 100%;
-    background-color: #000;
-    padding: 0.5rem 2rem 0.5rem 3rem;
+    padding: 0.5rem 1rem;
 }
 
 .App__header-row {
@@ -133,33 +140,39 @@ body {
     height: auto;
 }
 
-.App__playAndShare-container {
+.App__playAndShare-background {
     grid-column-start: 1;
     grid-column-end: 5;
     grid-row-start: 4;
     grid-row-end: 5;
     background-color: #F1F1F1;
-    height: 10rem;
+    height: 7rem;
+}
+
+.App__playAndShare-container {
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 4;
+    grid-row-end: 5;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
 }
 
 .App__playControl-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     padding: 0.5rem;
-    grid-column-start: 2;
-    grid-column-end: 3;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    margin: auto 0;
 }
 
 .App__playButton-container {
     display: flex;
-    justify-content: center;
-    margin-bottom: 1rem;
 }
 
-.App__playButton {
+.App__playControlButton {
     margin-right: 1.5rem;
 }
 
@@ -167,10 +180,9 @@ body {
     align-items: flex-end;
     display: flex;
     flex-direction: column;
-    grid-column-start: 3;
-    grid-column-end: 4;
+    grid-column-start: 2;
+    grid-column-end: 3;
     justify-content: center;
-    padding-right: 2rem;
 }
 
 @media only screen and (max-width: 768px) {
