--- a/src/App.scss
+++ b/src/App.scss
@@ -10,7 +10,7 @@ body {
     box-sizing: border-box;
     display: grid;
     grid-template-columns: 1fr min-content minmax(auto, 78rem) 1fr;
-    grid-template-rows: min-content auto 1fr min-content;
+    grid-template-rows: 70px auto 1fr 90px;
     row-gap: 1rem;
     height: 100vh;
 }
@@ -35,7 +35,8 @@ body {
 
 .App__title {
     width: 100%;
-    padding: 0.5rem 1rem;
+    padding: 0 2rem;
+    margin: auto 0;
 }
 
 .App__header-row {
@@ -64,6 +65,7 @@ body {
 }
 
 .App__scene-container {
+    margin-right: 1rem;
     grid-column-start: 3;
     grid-column-end: 4;
     grid-row-start: 2;
@@ -104,7 +106,7 @@ body {
 .App__command-palette {
     background-color: #F1F1F1;
     text-align: center;
-    margin-right: 1rem;
+    margin: 0 1rem;
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 2;
@@ -126,13 +128,14 @@ body {
 }
 
 .App__command-palette-commands {
-    width: 9rem;
+    width: 6rem;
     display: grid;
-    grid-template-columns: repeat(2, 4rem);
+    grid-template-columns: repeat(2, 2.5rem);
     grid-gap: 1rem;
 }
 
 .App__program-block-editor {
+    margin-right: 1rem;
     grid-column-start: 3;
     grid-column-end: 4;
     grid-row-start: 3;
@@ -150,6 +153,7 @@ body {
 }
 
 .App__playAndShare-container {
+    padding: 0 1rem;
     grid-column-start: 2;
     grid-column-end: 4;
     grid-row-start: 4;
@@ -162,7 +166,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 0.5rem;
     grid-column-start: 1;
     grid-column-end: 2;
     margin: auto 0;
