--- a/src/ProgramBlockEditor.scss
+++ b/src/ProgramBlockEditor.scss
@@ -128,8 +128,8 @@ button.btn.ProgramBlockEditor__program-deleteAll-button--pressed.ProgramBlockEdi
 }
 
 .ProgramBlockEditor__character-column-character {
-    width: 3rem;
-    height: 3rem;
+    width: 2.5rem;
+    height: 2.5rem;
 }
 
 .ProgramBlockEditor__program-sequence-scroll-container {
@@ -159,8 +159,10 @@ button.btn.ProgramBlockEditor__program-deleteAll-button--pressed.ProgramBlockEdi
     text-align: center;
     background-color: #000;
     color: #fff;
-    min-width: 4rem;
-    min-height: 4rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    min-width: 45px;
+    min-height: 45px;
     border-radius: 50%;
 }
 
