--- a/src/index.scss
+++ b/src/index.scss
@@ -63,8 +63,10 @@ button.btn-command-block--none {
 }
 
 button.command-block {
-    width: 4rem;
-    height: 4rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    min-width: 45px;
+    min-height: 45px;
     padding: 0;
 }
 
@@ -75,6 +77,6 @@ button.btn.command-block.command-block--pressed:active {
 }
 
 .command-block-svg {
-    width: 3.5rem;
-    height: 3.5rem;
+    width: 2rem;
+    height: 2rem;
 }
