--- a/src/ActionPanel.scss
+++ b/src/ActionPanel.scss
@@ -4,6 +4,8 @@
 //       centered with respect to the action panel.
 
 .ActionPanel__panel {
+    position:fixed;
+    z-index: 1;
     width: $c2lc-action-panel-width;
     height: $c2lc-action-panel-height;
     background-color: #F1F1F1;
