C2LC-286: Update each grid cell to have 100px width and height

--- a/src/Scene.scss
+++ b/src/Scene.scss
@@ -11,7 +11,7 @@
     background-color: #FFF;
     display: inline-block;
     box-sizing: border-box;
-    width: 100%;
+    width: 2600px;
 }
 
 .Scene__grid-line {
