--- a/src/PlayButton.scss
+++ b/src/PlayButton.scss
@@ -27,21 +27,21 @@ button.btn.PlayButton--play:not(:focus) {
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
 }
 
-button.btn.PlayButton--disabled {
+button.btn.PlayButton--play.PlayButton--disabled {
     background-color: $c2lc-primary-button-color;
     cursor: default;
 }
 
-button.btn.PlayButton.PlayButton--disabled svg {
+button.btn.PlayButton--play.PlayButton--disabled svg {
     fill: $c2lc-disabled-color;
 }
 
-button.btn.PlayButton.PlayButton--disabled:active:focus {
+button.btn.PlayButton--play.PlayButton--disabled:active:focus {
     background-color: $c2lc-primary-button-color;
     box-shadow: 0 0 0 $c2lc-focus-indicator-width $c2lc-focus-indicator-color;
 }
 
-button.btn.PlayButton:hover {
+button.btn.App__playButton:hover {
     box-shadow: 0 0 0 $c2lc-hover-indicator-width $c2lc-focus-indicator-color;
     background-color: #e5e5e5;
 }
