C2LC-272: Update PlayButton and StopButton styles

--- a/src/StopButton.scss
+++ b/src/StopButton.scss
@@ -18,7 +18,12 @@ button.btn.StopButton:not(:focus) {
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
 }
 
-button.btn.StopButton--disabled {
+button.btn.StopButton:hover {
+    box-shadow: 0 0 0 $c2lc-hover-indicator-width $c2lc-focus-indicator-color;
+    background-color: #e5e5e5;
+}
+
+button.btn.StopButton.StopButton--disabled {
     background-color: $c2lc-primary-button-color;
     cursor: default;
 }
