--- a/src/PlayButton.scss
+++ b/src/PlayButton.scss
@@ -1,30 +1,33 @@
 @import 'variables';
 
-button.btn.PlayButton--play {
+button.btn.PlayButton {
     margin-top: 0.5rem;
-    padding: 0.6rem 0.45rem 0.6rem 0.75rem;
     border: 1px solid #FFF;
     border-radius: 50%;
     background-color: #FFF;
+}
+
+button.btn.PlayButton--play {
+    padding: 0.6rem 0.45rem 0.6rem 0.75rem;
 }
 
 button.btn.PlayButton--pause {
-    margin-top: 0.5rem;
     padding: 0.6rem 0.6rem 0.6rem 0.6rem;
-    border: 1px solid #FFF;
-    border-radius: 50%;
-    background-color: #FFF;
 }
 
-button.btn.PlayButton--play svg,
-button.btn.PlayButton--pause svg {
+button.btn.PlayButton:not(:focus) {
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
+}
+
+button.btn.PlayButton:hover {
+    box-shadow: 0 0 0 $c2lc-hover-indicator-width $c2lc-focus-indicator-color;
+    background-color: #e5e5e5;
+}
+
+button.btn.PlayButton svg {
     fill: #000;
     width: 1.7rem;
     height: 1.7rem;
-}
-
-button.btn.PlayButton--play:not(:focus) {
-    box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
 }
 
 button.btn.PlayButton--play.PlayButton--disabled {
@@ -39,9 +42,4 @@ button.btn.PlayButton--play.PlayButton--disabled svg {
 button.btn.PlayButton--play.PlayButton--disabled:active:focus {
     background-color: $c2lc-primary-button-color;
     box-shadow: 0 0 0 $c2lc-focus-indicator-width $c2lc-focus-indicator-color;
-}
-
-button.btn.App__playButton:hover {
-    box-shadow: 0 0 0 $c2lc-hover-indicator-width $c2lc-focus-indicator-color;
-    background-color: #e5e5e5;
 }
