C2LC-286: Remove fixed position from ActionPanel and make the panel smaller

--- a/src/ActionPanel.scss
+++ b/src/ActionPanel.scss
@@ -4,10 +4,9 @@
 //       centered with respect to the action panel.
 
 .ActionPanel__panel {
-    position:fixed;
-    z-index: 1;
     width: $c2lc-action-panel-width;
     height: $c2lc-action-panel-height;
+    padding: 0.5rem 0;
     background-color: #F1F1F1;
     border: 0.1rem solid #939595;
     border-radius: 3rem;
