--- a/src/ProgramBlockEditor.scss
+++ b/src/ProgramBlockEditor.scss
@@ -9,7 +9,7 @@
     display: grid;
     height: 100%;
     grid-template-columns: 6rem auto;
-    grid-template-rows: 4rem auto;
+    grid-template-rows: auto auto;
 }
 
 .ProgramBlockEditor__header {
@@ -22,12 +22,12 @@
 }
 
 .ProgramBlockEditor__heading {
-    margin-top: 1.5rem;
+    margin: auto 0;
     font-weight: bold;
     font-size: inherit;
     grid-column-start: 1;
     grid-column-end: 2;
-    padding-left: 1rem;
+    padding: 1rem;
 }
 
 .ProgramBlockEditor__options {
@@ -142,6 +142,7 @@ button.btn.ProgramBlockEditor__program-deleteAll-button--pressed.ProgramBlockEdi
     background: #FFF;
     overflow: scroll;
     padding-left: 2rem;
+    padding-top: 3.5rem;
 }
 
 .ProgramBlockEditor__program-sequence {
@@ -149,7 +150,7 @@ button.btn.ProgramBlockEditor__program-deleteAll-button--pressed.ProgramBlockEdi
     justify-content: flex-start;
     align-items: center;
     padding-top: 2.5rem;
-    padding-bottom: 2.5rem;
+    padding-bottom: 1.5rem;
 }
 
 .ProgramBlockEditor__start-indicator {
@@ -204,5 +205,5 @@ button.ProgramBlockEditor__program-block--paused {
 .ProgramBlockEditor__action-panel-container-inner {
     position: absolute;
     left: #{-$c2lc-action-panel-width / 2};
-    top: #{-$c2lc-action-panel-height * 1.3};
+    top: #{-$c2lc-action-panel-height * 1.4};
 }
