--- a/src/App.scss
+++ b/src/App.scss
@@ -112,7 +112,7 @@ body {
     grid-column-end: 3;
     grid-row-start: 2;
     grid-row-end: 4;
-    overflow: hidden;
+    overflow: visible;
 }
 
 .App__command-palette-heading {
