--- a/src/ActionsMenu.scss
+++ b/src/ActionsMenu.scss
@@ -1,19 +1,33 @@
 .ActionsMenu__header {
+    position:relative;
     background-color: #cecccc;
-    margin-left: 0.15rem;
     margin-right: 0;
-    padding-top: 0.25rem;
+    padding-bottom: 0.05rem;
+    padding-top: 0.05rem;
+    text-align:center;
 }
 
 .ActionsMenu__header-heading {
     font-size: inherit;
     font-weight: bold;
-    padding-top: 0.25rem;
+    padding-top: 0.1rem;
 }
 
 .ActionsMenu__menu {
+    background-color: #ffffff;
     border-color: #cecccc;
     border-style: none solid solid solid;
-    margin-left: 0.15rem;
-    padding: 1em;
+    left: 8rem;
+    overflow: visible;
+    position: absolute;
+    top: 1.5rem;
+    width: 12rem;
+}
+
+.forest-theme .ActionsMenu__menu {
+    background-color: #CCE6E2;
+}
+
+.space-theme .ActionsMenu__menu {
+    background-color: #AAD5CF;
 }
