--- a/src/ActionsMenuToggle.scss
+++ b/src/ActionsMenuToggle.scss
@@ -1,8 +1,9 @@
 .ActionsMenu__toggle-button {
-    position: absolute;
+    align-self: center;
+    grid-column-end: 4;
+    grid-column-start: 3;
+    justify-self: center;
     width: 1em;
-    right: .25em;
-    top: -0.1rem;
 }
 
 .ActionsMenu__toggle-button svg {
