C2LC-286: Remove scene control panel and move controls on top of the scene

--- a/src/Scene.scss
+++ b/src/Scene.scss
@@ -2,8 +2,7 @@
 
 // Grid for Scene-container is set in App.scss
 .Scene-container {
-    grid-row-start: 1;
-    grid-row-end: 2;
+    height: 100%;
     overflow: scroll;
 }
 
