--- a/src/App.scss
+++ b/src/App.scss
@@ -53,6 +53,7 @@ body {
 }
 
 .App__scene-container {
+    position: relative;
     margin-top: 0.5rem;
     margin-right: 0.5rem;
     grid-column-start: 3;
@@ -62,22 +63,16 @@ body {
     min-height: 12rem;
     min-width: 19.5rem;
     max-width: 78rem;
-    display: grid;
-    grid-template-rows: auto min-content;
-    border-width: $c2lc-scene-border-width $c2lc-scene-border-width 0 $c2lc-scene-border-width;
+    border-width: $c2lc-scene-border-width;
     border-color: $c2lc-scene-border-color;
     border-style: $c2lc-scene-border-style;
 }
 
 .App__scene-controls {
-    grid-row-start: 2;
-    grid-row-end: 3;
-    background-color: #F1F1F1;
-    height: auto;
+    position: absolute;
     padding: 0.35rem 0;
-    border-width: 0 0 $c2lc-scene-border-width 0;
-    border-color: $c2lc-scene-border-color;
-    border-style: $c2lc-scene-border-style;
+    bottom: 0;
+    right: 0;
     display: grid;
     grid-template-columns: 1fr;
 }
