--- a/src/ProgramBlockEditor.scss
+++ b/src/ProgramBlockEditor.scss
@@ -167,7 +167,7 @@ button.btn.ProgramBlockEditor__program-deleteAll-button--pressed.ProgramBlockEdi
     height: 2.5rem;
     min-width: 45px;
     min-height: 45px;
-    border-radius: 50%;
+    border-radius: 0.2rem;
 }
 
 .ProgramBlockEditor__program-block-connector {
