--- a/src/ThemeSelector.scss
+++ b/src/ThemeSelector.scss
@@ -1,9 +1,12 @@
 @import 'variables';
 
 .ThemeSelector {
-    margin-left: 2rem;
+    button.btn-primary {
+        padding: .25rem 1.15rem;
+    }
+    
+    button:focus {
+        box-shadow: 0 0 0 $c2lc-focus-indicator-width #299DCE;
+    }
 }
 
-.ThemeSelector button:focus {
-    box-shadow: 0 0 0 $c2lc-focus-indicator-width #299DCE;
-}
