--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -2,9 +2,10 @@
 
 $c2lc-primary-button-color: #FFFFFF;
 
-$c2lc-forward-command-color: #91BD58;
-$c2lc-left-command-color: #E7DB6E;
-$c2lc-right-command-color: #E1604B;
+$c2lc-forward-command-color: #33717F;
+$c2lc-left-command-color: #D37D12;
+$c2lc-right-command-color: #C13925;
+
 
 $c2lc-focus-indicator-color: #000000;
 
